# cpusimu

./: README  build.txt  git.txt  test.txt
cbp2/: CMakeLists.txt
cbp2/doc/writeup/: analysis.tex  biblio.bib  conclusion.tex  gehl.tex  intro.tex  ogehl.tex  report.tex
cbp2/doc/writeup/figs/: graph.sh  graph1-acc.gp  graph1-stddev.gp  graph1-zoom-stddev.gp  graph1-zoom.gp  graph2-acc.gp  graph2-stddev.gp  graph3-acc.gp  graph3-stddev.gp  graph4-acc.gp  graph4-stddev.gp  graph5-acc.gp  graph5-stddev.gp  graph6.gp  graph7.gp  graph8-stddev.gp  graph8.gp
cbp2/src/: BakupMakefile  CMakeLists.txt  SaturatingCounter.hpp  bc2.h  branch.h  gehl.h  gshare.h  instruction.cxx  instruction.h  ogehl.hpp  predict.cc  predictor.h  processor.cxx  processor.h  seznec_ogehl.h  simulator.cxx  testCounter.cpp  testOgehl.cpp  tournament.cxx  tournament.h  trace.cc  trace.h
cbp2/testing/: bc2-arg  gehl-arg  gshare-arg  ogehl-config.txt  ogehl.sh  run  run2  tournament.sh
cbp2/traces/: tournament3-bimodal3-gshare4-4.output
hw6/: Makefile  gshare.h  instruction.cxx  instruction.h  processor.cxx  processor.h  simulator.cxx
hw6/test/: clean.sh  test.sh
hw6/test/mmoutput/: gcc-1K-regs=128-rob=8-width=4-exp=1.output  gcc-1K-regs=128-rob=8-width=4-exp=2.output  gcc-1K-regs=128-rob=8-width=4-exp=3.output  gcc-1K-regs=128-rob=8-width=4-exp=4.output  gcc-1K-regs=2048-rob=128-width=8-exp=1.output  gcc-1K-regs=2048-rob=128-width=8-exp=2.output  gcc-1K-regs=2048-rob=128-width=8-exp=4.output  gcc-1K-regs=64-rob=4-width=1-exp=1.output  gcc-1K-regs=64-rob=4-width=1-exp=4.output
hw6/test/myoutput/: gcc-1K-regs=2048-rob=128-width=8-exp=3.output  gcc-1K-regs=64-rob=4-width=1-exp=2.output
hw6/writeup/: hw6.tex  template.tex
(+3 files in other folders)
