CMAKE_MINIMUM_REQUIRED(VERSION 2.5 FATAL_ERROR)
PROJECT(PREDICT)

SET(CMAKE_COLOR_MAKEFILE ON)

SET(CMAKE_CXX_COMPILER g++)

SET(CMAKE_BUILD_TYPE "Debug")
IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
	SET(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -g -O0 -Wall")
	SET(CMAKE_VERBOSE_MAKEFILE ON)
ELSE(CMAKE_BUILD_TYPE STREQUAL "Debug")
	SET(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -O3 ")
	SET(CMAKE_VERBOSE_MAKEFILE OFF)
ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug")

ADD_SUBDIRECTORY(src bin)

ENABLE_TESTING()
SET(TRACES_DIR ${CMAKE_SOURCE_DIR}/traces)
SET(TEST_SCRIPTS_DIR ${CMAKE_SOURCE_DIR}/testing)
ADD_TEST(tournament ${TEST_SCRIPTS_DIR}/tournament.sh ${TRACES_DIR})
ADD_TEST(counter bin/test_counter)
ADD_TEST(gshare ${TEST_SCRIPTS_DIR}/run2 ${TRACES_DIR} gshare)
ADD_TEST(bc2 ${TEST_SCRIPTS_DIR}/run2 ${TRACES_DIR} bc2)
ADD_TEST(gehl ${TEST_SCRIPTS_DIR}/run2 ${TRACES_DIR} gehl)
ADD_TEST(seznec ${TEST_SCRIPTS_DIR}/run ${TRACES_DIR} seznec)
ADD_TEST(ogehl bin/test_ogehl)
ADD_TEST(ogehl2 ${TEST_SCRIPTS_DIR}/ogehl.sh ${TRACES_DIR} ${TEST_SCRIPTS_DIR})
ADD_TEST(all ${TEST_SCRIPTS_DIR}/run2 ${TRACES_DIR} )
